added a section in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world</p>
+    <section id="problem-section">
+        <h2>The Problem</h2>
+        <p></p>
+    </section>
 </body>
 </html>
