added Our mission section HTML and CSS

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/assets/styles/styles.css">
 </head>
 <body>
-    <section id="problem-section">
-        <h2>The Problem</h2>
-        <p></p>
+    <section class="mission-section">
+        <div>
+        <h2>Our Mission</h2>
+        <p>lorem ipsum</p>
+        </div>
+
+        <div>
+            <img src="amps-watts.png" alt="electricity wires"/>
+        </div>
     </section>
 </body>
 </html>
